# MAD-X

./: .gitattributes  .gitignore  .gitmodules  .htaccess  .travis.yml  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  Changes.md  Doxyfile  FS_trrun.f90  Google Chrome.lnk  License.txt  Makefile  Makefile.bat  Makefile.new  Makefile.old  Makefile.prof  MakefileIntel.bat  Makefile_c  Makefile_c++  Makefile_cpp  Makefile_cxx  Makefile_cyg  Makefile_develop  Makefile_f90  Makefile_g95  Makefile_gdb  Makefile_gfortran  Makefile_intel  Makefile_lib  Makefile_lnx  Makefile_local  Makefile_mac  Makefile_nag  Makefile_nag_leaks  Makefile_post  Makefile_pre  Makefile_sys  Makefile_test  (+364 more)
doc/: CMakeLists.txt  generateForWeb.sh  postHtmlCreation.sh  uploadWebTolxplus.sh
doc/latexuguide/: PTC_EPlacement.tex  PTC_Knob.tex  PTC_PrintParametric.tex  PTC_SetCavities.tex  PTC_SetKnobValue.tex  PTC_SetSwitch.tex  aperture.tex  beams.tex  biblio-mad.bib  c6t.tex  changelog.tex  cleanlatexdoc  contributors.tex  control.tex  conventions.tex  copyright.tex  cororbit.tex  coverpage.tex  defects.tex  definitions.tex  dynap.tex  elements.tex  emit.tex  error.tex  files.tex  foot.tex  format.tex  fortran-rules.tex  ibs.tex  index.tex  lhct.mad.tex  line.tex  madstyle.sty  makelatexdoc  makethin.tex  makethin_HBU.tex  match.tex  news.tex  pitfalls.tex  plot.tex  (+29 more)
doc/latexuguide/eps/: cut_out_time_var_mul.eps  cut_out_time_var_pha.eps  run_example2_new.eps  run_example_3D2_new.eps  start_coordinates.eps
doc/latexuguide/figures/: f-drf.tex  f-ermoni.tex  f-glob.tex  f-rbnd.tex  f-ref.tex  f-sbnd.tex  f-xsdisp.tex  f-xydisp.tex  f-ysdisp.tex  generatePlots.sh  template.tex
doc/mad8usrguide/: maduser.tex
doc/physguide/: madx-twiss_notes.tex  ptc-track_notes.tex
doc/usrguide/: sindex.html  uguide.html  uguide.tex
doc/usrguide/Introduction/: aperture.html  aperture.tex  attribute.html  attribute.tex  beam.html  beam.tex  beambeam.html  beambeam.tex  bend.html  bend.tex  biblio-mad.bib  bibliography.html  bibliography.tex  bv_flag.html  bv_flag.tex  cavity.html  cavity.tex  changelog.tex  closed_orbit.html  closed_orbit.tex  collimator.html  collimator.tex  constraint.html  constraint.tex  conventions.html  conventions.tex  copyright.html  copyright.tex  coverpage.tex  crabcavity.html  crabcavity.tex  declarations.html  declarations.tex  defects.html  defects.tex  dipedge.html  dipedge.tex  doc.html  doc.tex  drift.html  (+111 more)
doc/usrguide/archives/: pres2.ps
doc/usrguide/c6t/: c6t.html  c6t.tex
doc/usrguide/control/: beams.tex  control.html  control.tex  files.tex  foot.html  foot.tex  general.html  general.tex  programflow.tex  seqedit.html  seqedit.tex  special.html  special.tex  tables.tex
doc/usrguide/cororbit/: co_activate.html  co_activate.tex  co_correct.html  co_correct.tex  co_corrsave.html  co_corrsave.tex  co_option.html  co_option.tex  cororbit.html  cororbit.tex  lhct.mad.html
doc/usrguide/dynap/: dynap.html  dynap.tex
doc/usrguide/emit/: emit.html  emit.tex
doc/usrguide/error/: err1.ht  error.html  error.tex  error_align.html  error_align.tex  error_field.html  error_field.tex  error_option.html  error_option.tex  error_print.html  error_print.tex  error_save.html  error_save.tex  errors.html  errors.tex
doc/usrguide/ibs/: ibs.html  ibs.tex
doc/usrguide/mac/: Mad-X_on_MaxOS_X.html
doc/usrguide/makethin/: makethin.html  makethin.tex
doc/usrguide/match/: bibliography.html  bibliography.tex  examples  match.html  match.tex  match_con.html  match_con.tex  match_main.html  match_main.tex  match_um.html  match_um.tex  match_vary.html  match_vary.tex  match_xeq.html  match_xeq.tex  match_xmpl.html  match_xmpl.tex
doc/usrguide/module_keepers/: module_keepers.html
doc/usrguide/plot/: plot.html  plot.tex
doc/usrguide/plug-ins/: index.html  index.tex
doc/usrguide/ptc_auxiliaries/: Match_WithPTCKnobs.html  Match_WithPTCKnobs.tex  PTC_DumpMaps.html  PTC_DumpMaps.tex  PTC_EPlacement.html  PTC_EPlacement.tex  PTC_Knob.html  PTC_Knob.tex  PTC_Moments.html  PTC_Moments.tex  PTC_PrintFrames.html  PTC_PrintFrames.tex  PTC_PrintParametric.html  PTC_PrintParametric.tex  PTC_Select.html  PTC_Select.tex  PTC_SelectMoment.html  PTC_SelectMoment.tex  PTC_SetCavities.html  PTC_SetCavities.tex  PTC_SetKnobValue.html  PTC_SetKnobValue.tex  PTC_SetSwitch.html  PTC_SetSwitch.tex  ptc_auxiliaries.html  ptc_auxiliaries.tex
doc/usrguide/ptc_general/: ptc_general.html  ptc_general.tex
doc/usrguide/ptc_normal/: ptc_normal.html  ptc_normal.tex
doc/usrguide/ptc_track/: ptc_track.html  ptc_track.tex
doc/usrguide/ptc_track_line/: ptc_track_line.html  ptc_track_line.tex
doc/usrguide/ptc_twiss/: madxdoc.css  ptc_twiss.html  ptc_twiss.tex
doc/usrguide/reports/: reference.tex
doc/usrguide/sodd/: sodd.html  sodd.tex
doc/usrguide/survey/: V6.4.seq.070602  survey.html  survey.tex  survey_mad8.html  survey_mad8.tex
doc/usrguide/sxf/: sxf.html  sxf.tex
doc/usrguide/thintrack/: madxdoc.css  thintrack.html  thintrack.tex
doc/usrguide/threader/: README  threader.html  threader.tex
doc/usrguide/touschek/: touschek.html  (+1 more)
libs/ptc/: CMakeLists.txt  Makefile  Makefile_f90  Makefile_lib
src/: CMakeLists.txt  SDDS.h  Sa_extend_poly.f90  Sb_sagan_pol_arbitrary.f90  Se_status.f90  Sh_def_kind.f90  Si_def_element.f90  Sk_link_list.f90  Sl_family.f90  Sm_tracking.f90  Sma_multiparticle.f90  Sn_mad_like.f90  So_fitting.f90  Sp_keywords.f90  Sq_orbit_ptc.f90  Sr_spin.f90  Sra_fitting.f90  St_pointers.f90  a_def_all_kind.inc  a_def_element_fibre_layout.inc  a_def_frame_patch_chart.inc  a_namelists.inc  a_scratch_size.f90  c_dabnew_berz.f90  d_lielib.f90  dynap.f90  emit.f90  gxx11.f90  gxx11ps.f90  h_definition.f90  i_tpsa.f90  ibsdb.f90  j_tpsalie.f90  l_complex_taylor.f90  m_real_polymorph.f90  mad_6track.c  mad_6track_name_mangler.cpp  mad_6track_name_mangler.h  mad_aper.c  mad_aper.h  (+182 more)
syntax/: CMakeLists.txt  README.txt
syntax/emacs/: .emacs  README  madx.el
syntax/kate/: madx.xml
syntax/vim/: madx.vim
tools/numdiff/: CMakeLists.txt  Makefile  Makefile_c  Makefile_lib  Makefile_test  README
(+2428 files in other folders)
